# offkey

./: Cargo.toml
src/: alsa_source.rs  analyser.rs  cli.rs  curses.rs  error.rs  input.rs  main.rs  mic.rs  normalize.rs  note.rs  sample.rs  text.rs
text/: ru.yaml
